versions/0.8.1/_sources/refs/_aws-cdk_aws-cognito.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"xNXerwVHg0+OAilVHB3N/vMrgQ1wdA18dKREDbmB6oQ="}

@aws-cdk/aws-cognito
====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/cognito/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:cognito:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="cognito" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>cognito</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:cognito:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='cognito', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cognito/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cognito@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cognito": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cognito@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cognito/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cognito@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cognito": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cognito@0.8.1



.. mdinclude:: ./__aws-cdk_aws-cognito.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-cognito

IdentityPoolName
^^^^^^^^^^^^^^^^

.. py:class:: IdentityPoolName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.IdentityPoolName;

      .. code-tab:: javascript

         const { IdentityPoolName } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { IdentityPoolName } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserPoolArn
^^^^^^^^^^^

.. py:class:: UserPoolArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.UserPoolArn;

      .. code-tab:: javascript

         const { UserPoolArn } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { UserPoolArn } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserPoolClientClientSecret
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UserPoolClientClientSecret([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.UserPoolClientClientSecret;

      .. code-tab:: javascript

         const { UserPoolClientClientSecret } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { UserPoolClientClientSecret } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserPoolClientName
^^^^^^^^^^^^^^^^^^

.. py:class:: UserPoolClientName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.UserPoolClientName;

      .. code-tab:: javascript

         const { UserPoolClientName } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { UserPoolClientName } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserPoolProviderName
^^^^^^^^^^^^^^^^^^^^

.. py:class:: UserPoolProviderName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.UserPoolProviderName;

      .. code-tab:: javascript

         const { UserPoolProviderName } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { UserPoolProviderName } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserPoolProviderUrl
^^^^^^^^^^^^^^^^^^^

.. py:class:: UserPoolProviderUrl([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.UserPoolProviderUrl;

      .. code-tab:: javascript

         const { UserPoolProviderUrl } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { UserPoolProviderUrl } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-cognito.cloudformation

IdentityPoolResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: IdentityPoolResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolResource;

      .. code-tab:: javascript

         const { cloudformation.IdentityPoolResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.IdentityPoolResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IdentityPoolResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IdentityPoolResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: identityPoolName

      :type: :py:class:`~@aws-cdk/aws-cognito.IdentityPoolName` *(readonly)*

   .. py:class:: CognitoIdentityProviderProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolResource.CognitoIdentityProviderProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolResource.CognitoIdentityProviderProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolResource.CognitoIdentityProviderProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: clientId

         ``IdentityPoolResource.CognitoIdentityProviderProperty.ClientId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitoidentityprovider.html#cfn-cognito-identitypool-cognitoidentityprovider-clientid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: providerName

         ``IdentityPoolResource.CognitoIdentityProviderProperty.ProviderName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitoidentityprovider.html#cfn-cognito-identitypool-cognitoidentityprovider-providername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serverSideTokenCheck

         ``IdentityPoolResource.CognitoIdentityProviderProperty.ServerSideTokenCheck``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitoidentityprovider.html#cfn-cognito-identitypool-cognitoidentityprovider-serversidetokencheck


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: CognitoStreamsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolResource.CognitoStreamsProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolResource.CognitoStreamsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolResource.CognitoStreamsProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: roleArn

         ``IdentityPoolResource.CognitoStreamsProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitostreams.html#cfn-cognito-identitypool-cognitostreams-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: streamName

         ``IdentityPoolResource.CognitoStreamsProperty.StreamName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitostreams.html#cfn-cognito-identitypool-cognitostreams-streamname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: streamingStatus

         ``IdentityPoolResource.CognitoStreamsProperty.StreamingStatus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-cognitostreams.html#cfn-cognito-identitypool-cognitostreams-streamingstatus


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PushSyncProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolResource.PushSyncProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolResource.PushSyncProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolResource.PushSyncProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: applicationArns

         ``IdentityPoolResource.PushSyncProperty.ApplicationArns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-pushsync.html#cfn-cognito-identitypool-pushsync-applicationarns


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: roleArn

         ``IdentityPoolResource.PushSyncProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypool-pushsync.html#cfn-cognito-identitypool-pushsync-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



IdentityPoolResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IdentityPoolResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolResourceProps;

      .. code-tab:: javascript

         // cloudformation.IdentityPoolResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.IdentityPoolResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: allowUnauthenticatedIdentities

      ``AWS::Cognito::IdentityPool.AllowUnauthenticatedIdentities``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-allowunauthenticatedidentities


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cognitoEvents

      ``AWS::Cognito::IdentityPool.CognitoEvents``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-cognitoevents


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cognitoIdentityProviders

      ``AWS::Cognito::IdentityPool.CognitoIdentityProviders``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-cognitoidentityproviders


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolResource.CognitoIdentityProviderProperty` or undefined


   .. py:attribute:: cognitoStreams

      ``AWS::Cognito::IdentityPool.CognitoStreams``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-cognitostreams


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolResource.CognitoStreamsProperty` or undefined


   .. py:attribute:: developerProviderName

      ``AWS::Cognito::IdentityPool.DeveloperProviderName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-developerprovidername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: identityPoolName

      ``AWS::Cognito::IdentityPool.IdentityPoolName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-identitypoolname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: openIdConnectProviderArns

      ``AWS::Cognito::IdentityPool.OpenIdConnectProviderARNs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-openidconnectproviderarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: pushSync

      ``AWS::Cognito::IdentityPool.PushSync``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-pushsync


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolResource.PushSyncProperty` or undefined


   .. py:attribute:: samlProviderArns

      ``AWS::Cognito::IdentityPool.SamlProviderARNs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-samlproviderarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportedLoginProviders

      ``AWS::Cognito::IdentityPool.SupportedLoginProviders``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypool.html#cfn-cognito-identitypool-supportedloginproviders


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


IdentityPoolRoleAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IdentityPoolRoleAttachmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolRoleAttachmentResource;

      .. code-tab:: javascript

         const { cloudformation.IdentityPoolRoleAttachmentResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.IdentityPoolRoleAttachmentResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IdentityPoolRoleAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IdentityPoolRoleAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolRoleAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: MappingRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolRoleAttachmentResource.MappingRuleProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolRoleAttachmentResource.MappingRuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolRoleAttachmentResource.MappingRuleProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: claim

         ``IdentityPoolRoleAttachmentResource.MappingRuleProperty.Claim``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-mappingrule.html#cfn-cognito-identitypoolroleattachment-mappingrule-claim


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: matchType

         ``IdentityPoolRoleAttachmentResource.MappingRuleProperty.MatchType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-mappingrule.html#cfn-cognito-identitypoolroleattachment-mappingrule-matchtype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``IdentityPoolRoleAttachmentResource.MappingRuleProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-mappingrule.html#cfn-cognito-identitypoolroleattachment-mappingrule-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``IdentityPoolRoleAttachmentResource.MappingRuleProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-mappingrule.html#cfn-cognito-identitypoolroleattachment-mappingrule-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RoleMappingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolRoleAttachmentResource.RoleMappingProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolRoleAttachmentResource.RoleMappingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolRoleAttachmentResource.RoleMappingProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: ambiguousRoleResolution

         ``IdentityPoolRoleAttachmentResource.RoleMappingProperty.AmbiguousRoleResolution``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-rolemapping.html#cfn-cognito-identitypoolroleattachment-rolemapping-ambiguousroleresolution


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: rulesConfiguration

         ``IdentityPoolRoleAttachmentResource.RoleMappingProperty.RulesConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-rolemapping.html#cfn-cognito-identitypoolroleattachment-rolemapping-rulesconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolRoleAttachmentResource.RulesConfigurationTypeProperty` or undefined


      .. py:attribute:: type

         ``IdentityPoolRoleAttachmentResource.RoleMappingProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-rolemapping.html#cfn-cognito-identitypoolroleattachment-rolemapping-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RulesConfigurationTypeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolRoleAttachmentResource.RulesConfigurationTypeProperty;

         .. code-tab:: javascript

            // cloudformation.IdentityPoolRoleAttachmentResource.RulesConfigurationTypeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IdentityPoolRoleAttachmentResource.RulesConfigurationTypeProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: rules

         ``IdentityPoolRoleAttachmentResource.RulesConfigurationTypeProperty.Rules``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-identitypoolroleattachment-rulesconfigurationtype.html#cfn-cognito-identitypoolroleattachment-rulesconfigurationtype-rules


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolRoleAttachmentResource.MappingRuleProperty`



IdentityPoolRoleAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IdentityPoolRoleAttachmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.IdentityPoolRoleAttachmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.IdentityPoolRoleAttachmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.IdentityPoolRoleAttachmentResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: identityPoolId

      ``AWS::Cognito::IdentityPoolRoleAttachment.IdentityPoolId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypoolroleattachment.html#cfn-cognito-identitypoolroleattachment-identitypoolid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleMappings

      ``AWS::Cognito::IdentityPoolRoleAttachment.RoleMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypoolroleattachment.html#cfn-cognito-identitypoolroleattachment-rolemappings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.IdentityPoolRoleAttachmentResource.RoleMappingProperty` or undefined


   .. py:attribute:: roles

      ``AWS::Cognito::IdentityPoolRoleAttachment.Roles``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-identitypoolroleattachment.html#cfn-cognito-identitypoolroleattachment-roles


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


UserPoolClientResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolClientResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolClientResource;

      .. code-tab:: javascript

         const { cloudformation.UserPoolClientResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.UserPoolClientResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserPoolClientResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserPoolClientResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolClientResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: userPoolClientClientSecret

      :type: :py:class:`~@aws-cdk/aws-cognito.UserPoolClientClientSecret` *(readonly)*


   .. py:attribute:: userPoolClientName

      :type: :py:class:`~@aws-cdk/aws-cognito.UserPoolClientName` *(readonly)*


UserPoolClientResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolClientResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolClientResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserPoolClientResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserPoolClientResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: userPoolId

      ``AWS::Cognito::UserPoolClient.UserPoolId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-userpoolid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: clientName

      ``AWS::Cognito::UserPoolClient.ClientName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-clientname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: explicitAuthFlows

      ``AWS::Cognito::UserPoolClient.ExplicitAuthFlows``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-explicitauthflows


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: generateSecret

      ``AWS::Cognito::UserPoolClient.GenerateSecret``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-generatesecret


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: readAttributes

      ``AWS::Cognito::UserPoolClient.ReadAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-readattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: refreshTokenValidity

      ``AWS::Cognito::UserPoolClient.RefreshTokenValidity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-refreshtokenvalidity


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: writeAttributes

      ``AWS::Cognito::UserPoolClient.WriteAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html#cfn-cognito-userpoolclient-writeattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


UserPoolGroupResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolGroupResource;

      .. code-tab:: javascript

         const { cloudformation.UserPoolGroupResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.UserPoolGroupResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserPoolGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserPoolGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


UserPoolGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserPoolGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserPoolGroupResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: userPoolId

      ``AWS::Cognito::UserPoolGroup.UserPoolId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolgroup.html#cfn-cognito-userpoolgroup-userpoolid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::Cognito::UserPoolGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolgroup.html#cfn-cognito-userpoolgroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: groupName

      ``AWS::Cognito::UserPoolGroup.GroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolgroup.html#cfn-cognito-userpoolgroup-groupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: precedence

      ``AWS::Cognito::UserPoolGroup.Precedence``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolgroup.html#cfn-cognito-userpoolgroup-precedence


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: roleArn

      ``AWS::Cognito::UserPoolGroup.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolgroup.html#cfn-cognito-userpoolgroup-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


UserPoolResource
~~~~~~~~~~~~~~~~

.. py:class:: UserPoolResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource;

      .. code-tab:: javascript

         const { cloudformation.UserPoolResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.UserPoolResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserPoolResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserPoolResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: userPoolArn

      :type: :py:class:`~@aws-cdk/aws-cognito.UserPoolArn` *(readonly)*


   .. py:attribute:: userPoolProviderName

      :type: :py:class:`~@aws-cdk/aws-cognito.UserPoolProviderName` *(readonly)*


   .. py:attribute:: userPoolProviderUrl

      :type: :py:class:`~@aws-cdk/aws-cognito.UserPoolProviderUrl` *(readonly)*

   .. py:class:: AdminCreateUserConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.AdminCreateUserConfigProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.AdminCreateUserConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.AdminCreateUserConfigProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: allowAdminCreateUserOnly

         ``UserPoolResource.AdminCreateUserConfigProperty.AllowAdminCreateUserOnly``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-admincreateuserconfig.html#cfn-cognito-userpool-admincreateuserconfig-allowadmincreateuseronly


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: inviteMessageTemplate

         ``UserPoolResource.AdminCreateUserConfigProperty.InviteMessageTemplate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-admincreateuserconfig.html#cfn-cognito-userpool-admincreateuserconfig-invitemessagetemplate


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.InviteMessageTemplateProperty` or undefined


      .. py:attribute:: unusedAccountValidityDays

         ``UserPoolResource.AdminCreateUserConfigProperty.UnusedAccountValidityDays``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-admincreateuserconfig.html#cfn-cognito-userpool-admincreateuserconfig-unusedaccountvaliditydays


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: DeviceConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.DeviceConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.DeviceConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.DeviceConfigurationProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: challengeRequiredOnNewDevice

         ``UserPoolResource.DeviceConfigurationProperty.ChallengeRequiredOnNewDevice``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-deviceconfiguration.html#cfn-cognito-userpool-deviceconfiguration-challengerequiredonnewdevice


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: deviceOnlyRememberedOnUserPrompt

         ``UserPoolResource.DeviceConfigurationProperty.DeviceOnlyRememberedOnUserPrompt``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-deviceconfiguration.html#cfn-cognito-userpool-deviceconfiguration-deviceonlyrememberedonuserprompt


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EmailConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.EmailConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.EmailConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.EmailConfigurationProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: replyToEmailAddress

         ``UserPoolResource.EmailConfigurationProperty.ReplyToEmailAddress``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html#cfn-cognito-userpool-emailconfiguration-replytoemailaddress


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sourceArn

         ``UserPoolResource.EmailConfigurationProperty.SourceArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html#cfn-cognito-userpool-emailconfiguration-sourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: InviteMessageTemplateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.InviteMessageTemplateProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.InviteMessageTemplateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.InviteMessageTemplateProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: emailMessage

         ``UserPoolResource.InviteMessageTemplateProperty.EmailMessage``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-invitemessagetemplate.html#cfn-cognito-userpool-invitemessagetemplate-emailmessage


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: emailSubject

         ``UserPoolResource.InviteMessageTemplateProperty.EmailSubject``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-invitemessagetemplate.html#cfn-cognito-userpool-invitemessagetemplate-emailsubject


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: smsMessage

         ``UserPoolResource.InviteMessageTemplateProperty.SMSMessage``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-invitemessagetemplate.html#cfn-cognito-userpool-invitemessagetemplate-smsmessage


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LambdaConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.LambdaConfigProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.LambdaConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.LambdaConfigProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: createAuthChallenge

         ``UserPoolResource.LambdaConfigProperty.CreateAuthChallenge``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-createauthchallenge


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: customMessage

         ``UserPoolResource.LambdaConfigProperty.CustomMessage``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-custommessage


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: defineAuthChallenge

         ``UserPoolResource.LambdaConfigProperty.DefineAuthChallenge``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-defineauthchallenge


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: postAuthentication

         ``UserPoolResource.LambdaConfigProperty.PostAuthentication``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-postauthentication


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: postConfirmation

         ``UserPoolResource.LambdaConfigProperty.PostConfirmation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-postconfirmation


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: preAuthentication

         ``UserPoolResource.LambdaConfigProperty.PreAuthentication``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-preauthentication


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: preSignUp

         ``UserPoolResource.LambdaConfigProperty.PreSignUp``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-presignup


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: verifyAuthChallengeResponse

         ``UserPoolResource.LambdaConfigProperty.VerifyAuthChallengeResponse``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-lambdaconfig.html#cfn-cognito-userpool-lambdaconfig-verifyauthchallengeresponse


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: NumberAttributeConstraintsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.NumberAttributeConstraintsProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.NumberAttributeConstraintsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.NumberAttributeConstraintsProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: maxValue

         ``UserPoolResource.NumberAttributeConstraintsProperty.MaxValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-numberattributeconstraints.html#cfn-cognito-userpool-numberattributeconstraints-maxvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: minValue

         ``UserPoolResource.NumberAttributeConstraintsProperty.MinValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-numberattributeconstraints.html#cfn-cognito-userpool-numberattributeconstraints-minvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PasswordPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.PasswordPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.PasswordPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.PasswordPolicyProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: minimumLength

         ``UserPoolResource.PasswordPolicyProperty.MinimumLength``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-passwordpolicy.html#cfn-cognito-userpool-passwordpolicy-minimumlength


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: requireLowercase

         ``UserPoolResource.PasswordPolicyProperty.RequireLowercase``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-passwordpolicy.html#cfn-cognito-userpool-passwordpolicy-requirelowercase


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: requireNumbers

         ``UserPoolResource.PasswordPolicyProperty.RequireNumbers``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-passwordpolicy.html#cfn-cognito-userpool-passwordpolicy-requirenumbers


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: requireSymbols

         ``UserPoolResource.PasswordPolicyProperty.RequireSymbols``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-passwordpolicy.html#cfn-cognito-userpool-passwordpolicy-requiresymbols


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: requireUppercase

         ``UserPoolResource.PasswordPolicyProperty.RequireUppercase``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-passwordpolicy.html#cfn-cognito-userpool-passwordpolicy-requireuppercase


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PoliciesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.PoliciesProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.PoliciesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.PoliciesProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: passwordPolicy

         ``UserPoolResource.PoliciesProperty.PasswordPolicy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-policies.html#cfn-cognito-userpool-policies-passwordpolicy


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.PasswordPolicyProperty` or undefined


   .. py:class:: SchemaAttributeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.SchemaAttributeProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.SchemaAttributeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.SchemaAttributeProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: attributeDataType

         ``UserPoolResource.SchemaAttributeProperty.AttributeDataType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-attributedatatype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: developerOnlyAttribute

         ``UserPoolResource.SchemaAttributeProperty.DeveloperOnlyAttribute``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-developeronlyattribute


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: mutable

         ``UserPoolResource.SchemaAttributeProperty.Mutable``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-mutable


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``UserPoolResource.SchemaAttributeProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: numberAttributeConstraints

         ``UserPoolResource.SchemaAttributeProperty.NumberAttributeConstraints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-numberattributeconstraints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.NumberAttributeConstraintsProperty` or undefined


      .. py:attribute:: required

         ``UserPoolResource.SchemaAttributeProperty.Required``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-required


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: stringAttributeConstraints

         ``UserPoolResource.SchemaAttributeProperty.StringAttributeConstraints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-schemaattribute.html#cfn-cognito-userpool-schemaattribute-stringattributeconstraints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.StringAttributeConstraintsProperty` or undefined


   .. py:class:: SmsConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.SmsConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.SmsConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.SmsConfigurationProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: externalId

         ``UserPoolResource.SmsConfigurationProperty.ExternalId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-smsconfiguration.html#cfn-cognito-userpool-smsconfiguration-externalid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: snsCallerArn

         ``UserPoolResource.SmsConfigurationProperty.SnsCallerArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-smsconfiguration.html#cfn-cognito-userpool-smsconfiguration-snscallerarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StringAttributeConstraintsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResource.StringAttributeConstraintsProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolResource.StringAttributeConstraintsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolResource.StringAttributeConstraintsProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: maxLength

         ``UserPoolResource.StringAttributeConstraintsProperty.MaxLength``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-stringattributeconstraints.html#cfn-cognito-userpool-stringattributeconstraints-maxlength


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: minLength

         ``UserPoolResource.StringAttributeConstraintsProperty.MinLength``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-stringattributeconstraints.html#cfn-cognito-userpool-stringattributeconstraints-minlength


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



UserPoolResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserPoolResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserPoolResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: adminCreateUserConfig

      ``AWS::Cognito::UserPool.AdminCreateUserConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-admincreateuserconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.AdminCreateUserConfigProperty` or undefined


   .. py:attribute:: aliasAttributes

      ``AWS::Cognito::UserPool.AliasAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-aliasattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: autoVerifiedAttributes

      ``AWS::Cognito::UserPool.AutoVerifiedAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-autoverifiedattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deviceConfiguration

      ``AWS::Cognito::UserPool.DeviceConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-deviceconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.DeviceConfigurationProperty` or undefined


   .. py:attribute:: emailConfiguration

      ``AWS::Cognito::UserPool.EmailConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-emailconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.EmailConfigurationProperty` or undefined


   .. py:attribute:: emailVerificationMessage

      ``AWS::Cognito::UserPool.EmailVerificationMessage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-emailverificationmessage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: emailVerificationSubject

      ``AWS::Cognito::UserPool.EmailVerificationSubject``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-emailverificationsubject


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: lambdaConfig

      ``AWS::Cognito::UserPool.LambdaConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-lambdaconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.LambdaConfigProperty` or undefined


   .. py:attribute:: mfaConfiguration

      ``AWS::Cognito::UserPool.MfaConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-mfaconfiguration


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: policies

      ``AWS::Cognito::UserPool.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-policies


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.PoliciesProperty` or undefined


   .. py:attribute:: schema

      ``AWS::Cognito::UserPool.Schema``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-schema


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.SchemaAttributeProperty` or undefined


   .. py:attribute:: smsAuthenticationMessage

      ``AWS::Cognito::UserPool.SmsAuthenticationMessage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-smsauthenticationmessage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: smsConfiguration

      ``AWS::Cognito::UserPool.SmsConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-smsconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolResource.SmsConfigurationProperty` or undefined


   .. py:attribute:: smsVerificationMessage

      ``AWS::Cognito::UserPool.SmsVerificationMessage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-smsverificationmessage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: usernameAttributes

      ``AWS::Cognito::UserPool.UsernameAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-usernameattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: userPoolName

      ``AWS::Cognito::UserPool.UserPoolName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-userpoolname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: userPoolTags

      ``AWS::Cognito::UserPool.UserPoolTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html#cfn-cognito-userpool-userpooltags


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


UserPoolUserResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolUserResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolUserResource;

      .. code-tab:: javascript

         const { cloudformation.UserPoolUserResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.UserPoolUserResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserPoolUserResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserPoolUserResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolUserResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AttributeTypeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cognito.cloudformation.UserPoolUserResource.AttributeTypeProperty;

         .. code-tab:: javascript

            // cloudformation.UserPoolUserResource.AttributeTypeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserPoolUserResource.AttributeTypeProperty } from '@aws-cdk/aws-cognito';





      .. py:attribute:: name

         ``UserPoolUserResource.AttributeTypeProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpooluser-attributetype.html#cfn-cognito-userpooluser-attributetype-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``UserPoolUserResource.AttributeTypeProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpooluser-attributetype.html#cfn-cognito-userpooluser-attributetype-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



UserPoolUserResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolUserResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolUserResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserPoolUserResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserPoolUserResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: userPoolId

      ``AWS::Cognito::UserPoolUser.UserPoolId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-userpoolid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: desiredDeliveryMediums

      ``AWS::Cognito::UserPoolUser.DesiredDeliveryMediums``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-desireddeliverymediums


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: forceAliasCreation

      ``AWS::Cognito::UserPoolUser.ForceAliasCreation``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-forcealiascreation


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: messageAction

      ``AWS::Cognito::UserPoolUser.MessageAction``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-messageaction


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: userAttributes

      ``AWS::Cognito::UserPoolUser.UserAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-userattributes


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolUserResource.AttributeTypeProperty` or undefined


   .. py:attribute:: username

      ``AWS::Cognito::UserPoolUser.Username``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-username


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: validationData

      ``AWS::Cognito::UserPoolUser.ValidationData``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpooluser.html#cfn-cognito-userpooluser-validationdata


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolUserResource.AttributeTypeProperty` or undefined


UserPoolUserToGroupAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolUserToGroupAttachmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolUserToGroupAttachmentResource;

      .. code-tab:: javascript

         const { cloudformation.UserPoolUserToGroupAttachmentResource } = require('@aws-cdk/aws-cognito');

      .. code-tab:: typescript

         import { cloudformation.UserPoolUserToGroupAttachmentResource } from '@aws-cdk/aws-cognito';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserPoolUserToGroupAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserPoolUserToGroupAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-cognito.cloudformation.UserPoolUserToGroupAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


UserPoolUserToGroupAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserPoolUserToGroupAttachmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cognito.cloudformation.UserPoolUserToGroupAttachmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserPoolUserToGroupAttachmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserPoolUserToGroupAttachmentResourceProps } from '@aws-cdk/aws-cognito';





   .. py:attribute:: groupName

      ``AWS::Cognito::UserPoolUserToGroupAttachment.GroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolusertogroupattachment.html#cfn-cognito-userpoolusertogroupattachment-groupname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: username

      ``AWS::Cognito::UserPoolUserToGroupAttachment.Username``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolusertogroupattachment.html#cfn-cognito-userpoolusertogroupattachment-username


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: userPoolId

      ``AWS::Cognito::UserPoolUserToGroupAttachment.UserPoolId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolusertogroupattachment.html#cfn-cognito-userpoolusertogroupattachment-userpoolid


      :type: string or :py:class:`@aws-cdk/cdk.Token`



.. py:currentmodule:: @aws-cdk/aws-cognito

